@@ -1,5 +1,12 @@
 2004-01-13  Ross Burton  <ross@burtonini.com>
 
+	* src/sj-extracting.c:
+	* data/sound-juicer.glade:
+	Add a virtual penis, showing the estimated duration and ripping
+	speed. Thanks to Bastien for this patch.
+
+2004-01-13  Ross Burton  <ross@burtonini.com>
+
 	* src/sj-extractor.c:
 	Keep the ID of the idle callback, and remove it when we're done.
 
